meta desc added, screenshot to readme

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
 		/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+		<meta
+			name="description"
+			content="This application/site was created as a submission to a [DevChallenges](https://devchallenges.io/challenges) challenge. The [challenge](https://devchallenges.io/challenges/ohgVTyJCbm5OZyTB2gNY) was to build an application to complete the given user stories."
+		/>
+
 		<title>Devchallenges</title>
 	</head>
 	<body>
